--- a/jonas/css/starter/index.html
+++ b/jonas/css/starter/index.html
@@ -338,11 +338,8 @@
             </div>
             <div class="col-1-of-2">
                 <p class="footer__copyright">
-                    Built my <a href="#" class="footer__link">Alberto Lopez</a> for practice <a href="#"
-                        class="footer__link">Advance CSS and Sass</a> Copyright &copy; by Jonas Schmedtmann. You are
-                    100%
-                    allowed to use this webpage for both personal and commercial use, but NOT to claim it as your own
-                    design. A credit to the original author, Jonas Schmedtmann, is of course higlt appreciated!
+                    Built by <a href="#" class="footer__link">Alberto Lopez</a> following the course <a href="#"
+                        class="footer__link">Advance CSS and Sass</a> Copyright &copy; by Jonas Schmedtmann.
                 </p>
             </div>
         </div>
